--- a/index.html
+++ b/index.html
@@ -9,7 +9,49 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <title>Portifolio - Dev</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container info">
+        <img src="assets/images/Avatar.png" alt="" />
+        <p>Hello World! Meu nome é <span>Martina Santos</span> e sou</p>
+        <h1>Desenvolvedora Fullstack</h1>
+        <p>
+          Transformo necessidades em aplicações reais, evolventes e funcionais.
+          Desenvolvo sistemas através da minha paixão pela tecnologia,
+          contribuindo com soluções inovadoras e eficazes para desafios
+          complexos.
+        </p>
+        <div class="container languages">
+          <div class="language">
+            <img src="assets/icons/GitHub.svg" alt="">
+            <span>GitHub</span>
+          </div>
+          <div class="language">
+            <img src="assets/icons/HTML (1).svg" alt="">
+            <span>HTML</span>
+          </div>
+          <div class="language">
+            <img src="assets/icons/CSS.svg" alt="">
+            <span>CSS</span>
+          </div>
+          <div class="language">
+            <img src="assets/icons/JavaScript.svg" alt="">
+            <span>Javascript</span>
+          </div>
+          <div class="language">
+            <img src="assets/icons/React.svg" alt="">
+            <span>React</span>
+          </div>
+          <div class="language">
+            <img src="assets/icons/Node.js.svg" alt="">
+            <span>Node.js</span>
+          </div>
+
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
