--- a/index.html
+++ b/index.html
@@ -26,32 +26,76 @@
         </p>
         <div class="container languages">
           <div class="language">
-            <img src="assets/icons/GitHub.svg" alt="">
+            <img src="assets/icons/GitHub.svg" alt="" />
             <span>GitHub</span>
           </div>
           <div class="language">
-            <img src="assets/icons/HTML (1).svg" alt="">
+            <img src="assets/icons/HTML (1).svg" alt="" />
             <span>HTML</span>
           </div>
           <div class="language">
-            <img src="assets/icons/CSS.svg" alt="">
+            <img src="assets/icons/CSS.svg" alt="" />
             <span>CSS</span>
           </div>
           <div class="language">
-            <img src="assets/icons/JavaScript.svg" alt="">
+            <img src="assets/icons/JavaScript.svg" alt="" />
             <span>Javascript</span>
           </div>
           <div class="language">
-            <img src="assets/icons/React.svg" alt="">
+            <img src="assets/icons/React.svg" alt="" />
             <span>React</span>
           </div>
           <div class="language">
-            <img src="assets/icons/Node.js.svg" alt="">
+            <img src="assets/icons/Node.js.svg" alt="" />
             <span>Node.js</span>
           </div>
-
         </div>
       </div>
     </header>
+
+    <main class="container">
+      <div class="title">
+        <span>Meu trabalho</span>
+        <h2>Veja os projetos em destaque</h2>
+      </div>
+      <div class="projects">
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-01.png" alt="" />
+          <h3>Travelgram</h3>
+          <p>
+            Rede social onde as pessoas mostram os registros de suas viagens
+            pelo mundo
+          </p>
+        </a>
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-02.png" alt="" />
+          <h3>Tech News</h3>
+          <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+        </a>
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-03.png" alt="" />
+          <h3>Página de receita</h3>
+          <p>Página com o passo a passo de uma receita para cupcakes</p>
+        </a>
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-04.png" alt="" />
+          <h3>Zingen</h3>
+          <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+        </a>
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-05.png" alt="" />
+          <h3>Refund</h3>
+          <p>Um sistema para pedido e acompanhamento de reembolso</p>
+        </a>
+        <a class="project">
+          <img src="./assets/images/Thumbnail_Project-06.png" alt="" />
+          <h3>Pagina de turismo</h3>
+          <p>
+            Página com as principais informações para quem quer viajar para
+            Busan
+          </p>
+        </a>
+      </div>
+    </main>
   </body>
 </html>
