iniciando a area services

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </header>
 
-    <main class="container">
+    <main>
       <div class="title">
         <span>Meu trabalho</span>
         <h2>Veja os projetos em destaque</h2>
@@ -95,6 +95,20 @@
             Busan
           </p>
         </a>
+      </div>
+
+      <div class="service-bg">
+        <div class="title">
+          <span>Meus serviços</span>
+          <h2>Como posso ajudar seu negócio</h2>
+        </div>
+        <div class="services">
+          <div class="service">
+            <img src="./assets/icons/Devices (1).svg" alt="" />
+            <h2>Websites e aplicativos</h2>
+            <span>Desenvolvimento de interfaces</span>
+          </div>
+        </div>
       </div>
     </main>
   </body>
