area service finalizada

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
             <h2>Websites e aplicativos</h2>
             <span>Desenvolvimento de interfaces</span>
           </div>
+          <div class="service">
+            <img src="./assets/icons/HardDrives (1).svg" alt="" />
+            <h2>API e Banco de Dados</h2>
+            <span>Criação de serviços do sistema </span>
+          </div>
+          <div class="service">
+            <img src="./assets/icons/Infinity (1).svg" alt="" />
+            <h2>DevOps</h2>
+            <span>Gestão e infraestrutura da aplicação</span>
+          </div>
         </div>
       </div>
     </main>
