--- a/index.html
+++ b/index.html
@@ -121,5 +121,42 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="title">
+        <span class="purple">Meus serviços</span>
+        <h2>Gostou do meu trabalho?</h2>
+        <span>Entre em contato ou acompanhe as minhas redes sociais!</span>
+      </div>
+      <div class="social">
+        <a href="#" class="social-media">
+          <span>
+            <img src="assets/icons/LinkedinLogo.svg" alt="">
+            <span>Linkedin</span>
+          </span>
+          <img src="assets/icons/ArrowUpRight.svg" alt="">
+        </a>
+        <a href="#" class="social-media">
+          <span>
+            <img src="assets/icons/InstagramLogo.svg" alt="">
+            <span>Instagram</span>
+          </span>
+          <img src="assets/icons/ArrowUpRight.svg" alt="">
+        </a>
+        <a href="#" class="social-media">
+          <span>
+            <img src="assets/icons/GithubLogo.svg" alt="">
+            <span>GitHub</span>
+          </span>
+          <img src="assets/icons/ArrowUpRight.svg" alt="">
+        </a>
+        <a href="#" class="social-media">
+          <span>
+            <img src="assets/icons/EnvelopeSimple.svg" alt="">
+            <span>Email</span>
+          </span>
+          <img src="assets/icons/ArrowUpRight.svg" alt="">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
